--- a/frontend/src/app/admin-page/admin-reports.component.html
+++ b/frontend/src/app/admin-page/admin-reports.component.html
@@ -615,7 +615,7 @@
                 </mat-form-field>
               </div>
 
-              <!-- Filtros avanzados togglables -->
+              <!-- Filtros avanzados -->
               <div class="notif-filters" *ngIf="mostrarFiltros">
                 <mat-form-field appearance="outline">
                   <mat-label>Tipo</mat-label>
